k8s/wakapi/manifests/wakapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wakapi
  namespace: wakapi
spec:
  selector:
    app.kubernetes.io/name: wakapi
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
